--- a/resume.tex
+++ b/resume.tex
@@ -45,7 +45,12 @@
 		\end{tabular}
 		
 		\vspace{.1in}
-	
+	\section{\sc OBJECTIVE}
+
+To pursue graduate studies in computer science and engineering, leading to a career in research. I am interested in \bf Machine Learning ,Deep Learning ,IOT and Robotics. 
+
+\vspace{.1in}
+
 
 \end{resume}
 \end{document}
