--- a/resume.tex
+++ b/resume.tex
@@ -50,7 +50,20 @@
 To pursue graduate studies in computer science and engineering, leading to a career in research. I am interested in \bf Machine Learning ,Deep Learning ,IOT and Robotics. 
 
 \vspace{.1in}
-
+\section{\sc Education}
+\begin{tabular}{|l|c|l|c|l|c|}\hline
+	\bf Degree&\bf College/School&\bf University&\bf Passing Year&\bf Pass Percentage \\ \hline
+	BTech in CSE
+	&MBCET & KTU & 2017-Present&1st 2 sem CGPA = 7.48/10 \\ \hline
+	Class XII
+	&KV-PATTOM & CBSE-AISSCE  & 2017& Overall = 81 Percentage \\&&&&88 Percentage in CS 
+	
+	\\ \hline
+	Class X
+	&KV-PATTOM & CBSE-AISSCE  & 2017& Overall = 89.3 Percentage \\&&&&80 Percentage in MATHs 
+	
+	\\ \hline
+\end{tabular}	
 
 \end{resume}
 \end{document}
