--- a/resume.tex
+++ b/resume.tex
@@ -64,6 +64,15 @@ To pursue graduate studies in computer science and engineering, leading to a car
 	
 	\\ \hline
 \end{tabular}	
+\section{\sc PROJECTS}
+
+\begin{enumerate} %Job Description%
+	\item omni-directional wheel design \\
+	\item Basic implementation of home automation\\
+	\item Wireless basket ball count down timer display\\
+\end{enumerate}
+
+
 
 \end{resume}
 \end{document}
