Training and Internship

--- a/resume.tex
+++ b/resume.tex
@@ -72,7 +72,8 @@ To pursue graduate studies in computer science and engineering, leading to a car
 	\item Wireless basket ball count down timer display\\
 \end{enumerate}
 
-
+\section{\sc Training and Internship}
+Trained in arduino \\
 
 \end{resume}
 \end{document}
