Research and Publication

--- a/resume.tex
+++ b/resume.tex
@@ -74,6 +74,9 @@ To pursue graduate studies in computer science and engineering, leading to a car
 
 \section{\sc Training and Internship}
 Trained in arduino \\
+\section{\sc Research and Publication}
 
+\bf NIL
+\vspace{.1in}
 \end{resume}
 \end{document}
