--- a/resume.tex
+++ b/resume.tex
@@ -78,5 +78,11 @@ Trained in arduino \\
 
 \bf NIL
 \vspace{.1in}
+\section{\sc Technical Skills}
+{\bf Programming and Scripting Languages}:  C, Cpp,Python \\
+{\bf Operating Systems}: Windows and Beginner at Linux,\\
+{\bf Database Tools}  :  Beginner at MySql\\
+{\bf Software Pakages}:  Beginner at opencv\\
+{\bf Platforms}       : Beginner at Pytorch
 \end{resume}
 \end{document}
