--- a/resume.tex
+++ b/resume.tex
@@ -84,5 +84,13 @@ Trained in arduino \\
 {\bf Database Tools}  :  Beginner at MySql\\
 {\bf Software Pakages}:  Beginner at opencv\\
 {\bf Platforms}       : Beginner at Pytorch
+%%%%%%%%%%%%%%%%%%%
+\section{\sc Soft Skills}
+\begin{enumerate} %Job Description%
+	\item Leadership 
+	\item Colabration and Teamwork
+	\item Strong work ethic 
+	\item learnability 
+\end{enumerate}
 \end{resume}
 \end{document}
