Extra-Curricular Activities

--- a/resume.tex
+++ b/resume.tex
@@ -92,5 +92,18 @@ Trained in arduino \\
 	\item Strong work ethic 
 	\item learnability 
 \end{enumerate}
+%%%%%%%%%%%%%%%%%%%
+
+\section{\sc Extra-Curricular Activities}
+\begin{list2} %Job Description%
+	\item \bf IEDC Summit 2018 \\
+	Attended  the IEDC Summit 2018 held on Nov 3rd \\
+	\item \bf FYPM by ICFOSS 2018-19\\
+	Attended the FYPM Summit 2019 held on Feb 9th-10th 
+	\item \bf School Of AI  \\
+	Actively Participating meetups conducted by School of AI Thrivandrum
+	
+\end{list2}
+%%%%%%%%%%%%%%%%%%%
 \end{resume}
 \end{document}
