Co-Curricular Activities

--- a/resume.tex
+++ b/resume.tex
@@ -105,5 +105,18 @@ Trained in arduino \\
 	
 \end{list2}
 %%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+\section{\sc Co-Curricular Activities}
+\begin{enumerate} %Job Description%
+	\item \bf EYRC 2018-19 \\
+	2nd position in the theme HOMECOMING in e-Yantra IIT ROBOTICs competition \\
+	\item \bf Mission Reconnect-2018\\
+	Volunteered for Mission Reconnect-2018 by KSEB 
+	\item \bf LCD DISPLAY   \\
+	Volunteered for LCD DISPLAY for our college (MBCET)
+	\item Roborace IEDC catalyst 2nd runner-up\\
+	
+\end{enumerate}
+%%%%%%%%%%%%%%%%%%%
 \end{resume}
 \end{document}
