Professional experience and personal details

--- a/resume.tex
+++ b/resume.tex
@@ -118,5 +118,39 @@ Trained in arduino \\
 	
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%
+\section{\sc Professional Experience}
+%%%%%%
+{\bf MBCET}, TVM, KERALA. INDIA. \hfill{August 2017 -- Present}\\
+\\
+{\em Executive Member  OF IEDC }\hfill {Jan 2018 -- present}\\
+\begin{list2} %Job Description%
+	\item Responsible for Coordinating Events  \\
+\end{list2}
+%%%%%%
+{\em Executive Member  OF FOSS }\hfill {December 2018 -- Present}\\
+\begin{list2} %Job Description%
+	\item Responsible for Spreading awarness about FOSS  \\
+	\item Coordinating Foss retated activities.
+\end{list2}
+
+{\em Executive Member  OF DSC }\hfill {Feburary 2019 -- Present}\\
+\begin{list2} %Job Description%
+	\item Responsible for Spreading awarness about DSC  \\
+	\item Coordinating DSC retated activities.
+\end{list2}
+{\em Executive Member  OF OPENLABs }\hfill {Feburary 2019 -- Present}\\
+\begin{list2} %Job Description%
+	\item Responsible for Publications team  \\
+	
+\end{list2}
+%%%%%%%%%%%
+%%%%%%%%%%%%%%%%
+\section{\sc Personal Details}
+{\bf Father's Name}:  C Jayaprakash\\
+{\bf Mothers's Name}:  Kavitha C\\
+{\bf Sex}  :  MALE\\
+{\bf Date Of Birth}:  25th August 1999\\
+{\bf Nationality}       : Indian \\
+{\bf Marital Status}       : Single \\
 \end{resume}
 \end{document}
