--- a/resume.tex
+++ b/resume.tex
@@ -152,5 +152,12 @@ Trained in arduino \\
 {\bf Date Of Birth}:  25th August 1999\\
 {\bf Nationality}       : Indian \\
 {\bf Marital Status}       : Single \\
+
+\section{\sc REFERENCE }
+
+\bf Arun J S,\\ Mentors at K-DISC and
+Professor at Department of Electronics and Communication\\ of Engineering, Mar Baselios College Of Engineering andTechnology, +91 9496368197, mearunjs@gmail.com
+
+\bf Tessy Mathew ,\\ HOD of Department of Computer Science and Engineering, Mar Baselios College Of Engineering and Technology, +91 9447696899, Tessy.mathew@mbcet.ac.in
 \end{resume}
 \end{document}
