--- a/resume.tex
+++ b/resume.tex
@@ -159,5 +159,8 @@ Trained in arduino \\
 Professor at Department of Electronics and Communication\\ of Engineering, Mar Baselios College Of Engineering andTechnology, +91 9496368197, mearunjs@gmail.com
 
 \bf Tessy Mathew ,\\ HOD of Department of Computer Science and Engineering, Mar Baselios College Of Engineering and Technology, +91 9447696899, Tessy.mathew@mbcet.ac.in
+
+\section{\sc DECLARATION}
+I do hereby declare that above particulars of information and facts stated are true, correct and complete to the best of my knowledge and belief.
 \end{resume}
 \end{document}
