--- a/resume.tex
+++ b/resume.tex
@@ -162,5 +162,7 @@ Professor at Department of Electronics and Communication\\ of Engineering, Mar B
 
 \section{\sc DECLARATION}
 I do hereby declare that above particulars of information and facts stated are true, correct and complete to the best of my knowledge and belief.
+\section{\sc DATE}
+\bf 17th APRIL 2019
 \end{resume}
 \end{document}
