--- a/resume.tex
+++ b/resume.tex
@@ -26,21 +26,21 @@
 
 \begin{document}
 	
-	\name{\LARGE Abhijeet c} \hfill {\em \today}
+	\name{\LARGE Abhijeet.C} \hfill {\em \today}
 	
 	\begin{resume}
 		\section{\sc Contact Information}
 		
 		\vspace{.05in}
 		\begin{tabular}{@{}p{3.5in}p{3in}}
-			2nd  Year B.Tech Student                                                                     & {Phone:}  9446236815 \\
+			3rd  Year B.Tech Student                                                                     & {Phone:}  9446236815 \\
 			Mar Baselios College Of Engineering
 			and Technology 
 			& {E-mail:}  abhijeetcherungottil@gmail.com\\
 			Mar Ivanios College Rd, Nalanchira.\\
 			Thattinakam, Thiruvananthapuram, Kerala 695015.\\ 
 			&
-			\includegraphics[width=0.1\textheight]{my}
+			\includegraphics[width=0.15\textheight]{my}
 			
 		\end{tabular}
 		
@@ -54,26 +54,28 @@ To pursue graduate studies in computer science and engineering, leading to a car
 \begin{tabular}{|l|c|l|c|l|c|}\hline
 	\bf Degree&\bf College/School&\bf University&\bf Passing Year&\bf Pass Percentage \\ \hline
 	BTech in CSE
-	&MBCET & KTU & 2017-Present&1st 2 sem CGPA = 7.48/10 \\ \hline
+	&MBCET & KTU & 2017-Present&overall CGPA till 4th\\ &&&&semester  = 7.04/10 \\ \hline
 	Class XII
 	&KV-PATTOM & CBSE-AISSCE  & 2017& Overall = 81 Percentage \\&&&&88 Percentage in CS 
 	
 	\\ \hline
 	Class X
-	&KV-PATTOM & CBSE-AISSCE  & 2017& Overall = 89.3 Percentage \\&&&&80 Percentage in MATHs 
+	&KV-PATTOM & CBSE-AISSCE  & 2015& Overall = 89.3 Percentage \\&&&&80 Percentage in MATHs 
 	
 	\\ \hline
 \end{tabular}	
 \section{\sc PROJECTS}
 
 \begin{enumerate} %Job Description%
-	\item omni-directional wheel design \\
+	\item Sign Laguage Traslator app (Prototype) \\
 	\item Basic implementation of home automation\\
-	\item Wireless basket ball count down timer display\\
+	\item Case Study ofthe paper YOLO\\
+	
 \end{enumerate}
 
 \section{\sc Training and Internship}
 Trained in arduino \\
+Internship at NEUROPLEX \\
 \section{\sc Research and Publication}
 
 \bf NIL
@@ -122,7 +124,7 @@ Trained in arduino \\
 %%%%%%
 {\bf MBCET}, TVM, KERALA. INDIA. \hfill{August 2017 -- Present}\\
 \\
-{\em Executive Member  OF IEDC }\hfill {Jan 2018 -- present}\\
+{\em Executive Member  OF IEDC }\hfill {Jan 2018 -- May 2019}\\
 \begin{list2} %Job Description%
 	\item Responsible for Coordinating Events  \\
 \end{list2}
@@ -133,14 +135,14 @@ Trained in arduino \\
 	\item Coordinating Foss retated activities.
 \end{list2}
 
-{\em Executive Member  OF DSC }\hfill {Feburary 2019 -- Present}\\
+{\em Executive Member  OF DSC }\hfill {Feburary 2019 -- 30 July 2019}\\
 \begin{list2} %Job Description%
 	\item Responsible for Spreading awarness about DSC  \\
 	\item Coordinating DSC retated activities.
 \end{list2}
 {\em Executive Member  OF OPENLABs }\hfill {Feburary 2019 -- Present}\\
 \begin{list2} %Job Description%
-	\item Responsible for Publications team  \\
+	\item Responsible for organising.   \\
 	
 \end{list2}
 %%%%%%%%%%%
@@ -163,6 +165,6 @@ Professor at Department of Electronics and Communication\\ of Engineering, Mar B
 \section{\sc DECLARATION}
 I do hereby declare that above particulars of information and facts stated are true, correct and complete to the best of my knowledge and belief.
 \section{\sc DATE}
-\bf 17th APRIL 2019
+\bf 30th AUGUST 2019
 \end{resume}
 \end{document}
