--- a/resume.tex
+++ b/resume.tex
@@ -69,19 +69,19 @@ To pursue graduate studies in computer science and engineering, leading to a car
 \begin{enumerate} %Job Description%
 	\item Sign Laguage Traslator app (Prototype) \\
 	\item Basic implementation of home automation\\
-	\item Case Study ofthe paper YOLO\\
+	\item Case Study of the paper YOLO\\
 	
 \end{enumerate}
 
 \section{\sc Training and Internship}
-Trained in arduino \\
+Trained in arduino and FireBird V\\
 Internship at NEUROPLEX \\
 \section{\sc Research and Publication}
 
 \bf NIL
 \vspace{.1in}
 \section{\sc Technical Skills}
-{\bf Programming and Scripting Languages}:  C, Cpp,Python \\
+{\bf Programming and Scripting Languages}: Embeded C, Cpp,Python \\
 {\bf Operating Systems}: Windows and Beginner at Linux,\\
 {\bf Database Tools}  :  Beginner at MySql\\
 {\bf Software Pakages}:  Beginner at opencv\\
