--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@ To pursue graduate studies in computer science and engineering, leading to a car
 \begin{tabular}{|l|c|l|c|l|c|}\hline
 	\bf Degree&\bf College/School&\bf University&\bf Passing Year&\bf Pass Percentage \\ \hline
 	BTech in CSE
-	&MBCET & KTU & 2017-Present&overall CGPA till 4th\\ &&&&semester  = 7.04/10 \\ \hline
+	&MBCET & KTU & 2017-Present&overall CGPA till 4th\\ &&&&semester  = 7.29/10 \\ \hline
 	Class XII
 	&KV-PATTOM & CBSE-AISSCE  & 2017& Overall = 81 Percentage \\&&&&88 Percentage in CS 
 	
@@ -100,6 +100,8 @@ Internship at NEUROPLEX \\
 \begin{list2} %Job Description%
 	\item \bf IEDC Summit 2018 \\
 	Attended  the IEDC Summit 2018 held on Nov 3rd \\
+	\item \bf IEDC Summit 2019 \\
+	Attended  the IEDC Summit 2019 held on Oct 10th \\
 	\item \bf FYPM by ICFOSS 2018-19\\
 	Attended the FYPM Summit 2019 held on Feb 9th-10th 
 	\item \bf School Of AI  \\
@@ -110,8 +112,8 @@ Internship at NEUROPLEX \\
 %%%%%%%%%%%%%%%%%%%
 \section{\sc Co-Curricular Activities}
 \begin{enumerate} %Job Description%
-	\item \bf EYRC 2018-19 \\
-	2nd position in the theme HOMECOMING in e-Yantra IIT ROBOTICs competition \\
+	\item \bf EYRC 2018-19 ( E-Yantra Robotics Competition) \\
+	Winner (1st Runner-up) of National Competition held at IIT Mumbai for theme 'HOMECOMING' . \\
 	\item \bf Mission Reconnect-2018\\
 	Volunteered for Mission Reconnect-2018 by KSEB 
 	\item \bf LCD DISPLAY   \\
